k8s/namespaces/ingress/traefik/middlewares.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: authentik
    namespace: ingress
spec:
    forwardAuth:
      address: http://ak-outpost-authentik-embedded-outpost.security.svc.cluster.local:9000/outpost.goauthentik.io/auth/traefik
      trustForwardHeader: true
      authResponseHeaders:
          - X-authentik-username
          - X-authentik-groups
          - X-authentik-entitlements
          - X-authentik-email
          - X-authentik-name
          - X-authentik-uid
          - X-authentik-jwt
          - X-authentik-meta-jwks
          - X-authentik-meta-outpost
          - X-authentik-meta-provider
          - X-authentik-meta-app
          - X-authentik-meta-version
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: internal-whitelist
  namespace: ingress
spec:
  ipAllowList:
    sourceRange:
      - 192.168.0.0/16
      - 172.16.0.0/12
      - 10.0.0.0/8
      - 127.0.0.0/8
