k8s/namespaces/ingress/traefik/alloy-syslog.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: alloy-syslog-tcp
  namespace: ingress
spec:
  entryPoints:
    - syslogtcp
  routes:
    - match: "HostSNI(`*`)"
      services:
        - name: alloy
          namespace: monitoring
          port: 514
