k8s/namespaces/ingress/traefik/clickstack-syslog.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: clickstack-syslog-tcp
  namespace: ingress
spec:
  entryPoints:
    - syslogtcp
  routes:
    - match: "HostSNI(`*`)"
      services:
        - name: clickstack-otel-syslog
          namespace: monitoring
          port: 514
